@@ -9,13 +9,13 @@ DESCRIPTION
         <obj> is not interactive, or if TLS is not available, an error
         is thrown.
 
-        If <obj> doesn't have a secure connection up and running, the
-        function returns 0. Otherwise, the result is an array with
-        these entries:
+        If <obj> doesn't have a secure connection up and running, an
+        error is thrown.
 
-          int [0]      : Result code: 0: The certificate is ok.
-                                      1: The certificate is not ok.
-                                      2: The certificate is self-signed.
+        Otherwise, the result is an array with these entries:
+
+          int [0]      : Result code of SSL_get_verify_result (see man 1 verify
+                         subsection DIAGNOSTICS for possible values)
           string [1]   : Subject
           int    [2..9]: Not used yet.
           string [10]  : SHA-1 Fingerprint
@@ -26,6 +26,9 @@ BUGS
 
 HISTORY
         Introduced in LDMud 3.3.672/3.2.11.
+        LDMud 3.3.711/3.2.12 modified the behaviour to return the
+        low-level API result value, and to throw an error if the connection
+        is not secure.
 
 SEE ALSO
         tls_init_connection(E), tls_deinit_connection(E), tls_error(E),
