@@ -882,13 +882,12 @@ f_tls_check_certificate(svalue_t *sp)
  * <obj> is not interactive, or if TLS is not available, an error
  * is thrown.
  * 
- * If <obj> doesn't have a secure connection up and running, the
- * function returns 0. Otherwise, the result is an array with
- * these entries:
+ * If <obj> doesn't have a secure connection up and running, an
+ * error is thrown.
+ * Otherwise, the result is an array with these values:
  * 
- *   int [0]      : Result code: 0: The certificate is ok.
- *                               1: The certificate is not ok.
- *                               2: The certificate is self-signed.
+ *   int [0]      : Result code of SSL_get_verify_result (see man 1 verify
+ *                  subsection DIAGNOSTICS for possible values)
  *   string [1]   : Subject
  *   int    [2..9]: Not used yet.
  *   string [10]  : SHA-1 Fingerprint
@@ -904,15 +903,16 @@ f_tls_check_certificate(svalue_t *sp)
     interactive_t *ip;
     
     if (!tls_available)
-        errorf("tls_init_connection(): TLS layer hasn't been initialized.\n");
+        errorf("tls_check_certificate(): TLS layer hasn't been initialized.\n");
 
     if (!O_SET_INTERACTIVE(ip, sp->u.ob))
         errorf("Bad arg 1 to tls_check_certificate(): "
               "object not interactive.\n");
 
-    if (ip->tls_status == TLS_ACTIVE) 
+    if (ip->tls_status != TLS_ACTIVE) 
+        errorf("tls_check_certificate(): object doesn't have a secure connection.\n");
+    else
     {
-	v = allocate_array(12);
 	peer = SSL_get_peer_certificate(ip->tls_session);
 	if (peer != NULL)
 	{
@@ -921,19 +921,8 @@ f_tls_check_certificate(svalue_t *sp)
 	    string_t *sha;
 	    unsigned char *shabuf;
 	    
+	    v = allocate_array(12);
 	    verify_result = SSL_get_verify_result(ip->tls_session);
-	    switch(verify_result)
-	    {
-	    case X509_V_OK:
-		verify_result = 1;
-		break;
-	    case X509_V_ERR_DEPTH_ZERO_SELF_SIGNED_CERT:
-		verify_result = 2;
-		break;
-	    default:
-		verify_result = 0;
-		break;
-	    }
 	    put_number(&(v->item[0]), verify_result);
 
 	    /* fill the result with various information about 
