@@ -19,7 +19,7 @@ version_type="dev"
 # A timestamp, to be used by bumpversion and other scripts.
 # It can be used, for example, to 'touch' this file on every build, thus
 # forcing revision control systems to add it on every checkin automatically.
-version_stamp="Wed Oct 12 00:31:43 MDT 2005"
+version_stamp="Wed Oct 19 21:11:44 MDT 2005"
 
 # The version number information
 # $Format: "version_micro=$ReleaseMicro$"$ 
