@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+19-Oct-2005 (Lars Duening)
+  - (pkg-tls.c) tls_check_certificate() now returns the low-level API
+      values, and throws an error if the connection is not secure.
+
 11-Oct-2005 (Lars Duening)
   - (erq/erq.c, xerq/socket.c) Corrected compilation warnings.
   - (lex.c) to_int() no longer accepts "x<num>" as valid sedecimal
